@@ -514,6 +514,22 @@ name|common
 operator|.
 name|params
 operator|.
+name|CoreAdminParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|MapSolrParams
 import|;
 end_import
@@ -895,6 +911,16 @@ operator|.
 name|util
 operator|.
 name|Objects
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
 import|;
 end_import
 
@@ -1587,6 +1613,9 @@ argument_list|()
 expr_stmt|;
 comment|// last
 name|deleteCollectionWithDownNodes
+argument_list|()
+expr_stmt|;
+name|addReplicaTest
 argument_list|()
 expr_stmt|;
 if|if
@@ -7137,6 +7166,41 @@ argument_list|(
 literal|"shard2"
 argument_list|)
 expr_stmt|;
+name|Properties
+name|props
+init|=
+operator|new
+name|Properties
+argument_list|()
+decl_stmt|;
+name|String
+name|instancePathStr
+init|=
+name|createTempDir
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|INSTANCE_DIR
+argument_list|,
+name|instancePathStr
+argument_list|)
+expr_stmt|;
+comment|//Use name via the property.instanceDir method
+name|addReplica
+operator|.
+name|setProperties
+argument_list|(
+name|props
+argument_list|)
+expr_stmt|;
 name|client
 operator|.
 name|request
@@ -7200,6 +7264,85 @@ block|}
 name|assertNotNull
 argument_list|(
 name|newReplica
+argument_list|)
+expr_stmt|;
+name|HttpSolrClient
+name|coreclient
+init|=
+operator|new
+name|HttpSolrClient
+argument_list|(
+name|newReplica
+operator|.
+name|getStr
+argument_list|(
+name|ZkStateReader
+operator|.
+name|BASE_URL_PROP
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|CoreAdminResponse
+name|status
+init|=
+name|CoreAdminRequest
+operator|.
+name|getStatus
+argument_list|(
+name|newReplica
+operator|.
+name|getStr
+argument_list|(
+literal|"core"
+argument_list|)
+argument_list|,
+name|coreclient
+argument_list|)
+decl_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|coreStatus
+init|=
+name|status
+operator|.
+name|getCoreStatus
+argument_list|(
+name|newReplica
+operator|.
+name|getStr
+argument_list|(
+literal|"core"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|String
+name|instanceDirStr
+init|=
+operator|(
+name|String
+operator|)
+name|coreStatus
+operator|.
+name|get
+argument_list|(
+literal|"instanceDir"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|Paths
+operator|.
+name|get
+argument_list|(
+name|instanceDirStr
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|instancePathStr
 argument_list|)
 expr_stmt|;
 block|}
